# pelzl

./: .gitignore  ChangeLog  Makefile  README.adoc  dune-project  orpie  orpie.opam  pelzl.opam
.github/workflows/: release.yml
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/config/: ocaml.config
_opam/.opam-switch/install/: astring.changes  bos.changes  camlp-streams.changes  camlp5-buildscripts.changes  camlp5.changes  csexp.changes  curses.changes  curses.install  dune-configurator.changes  dune.changes  dune.install  fmt.changes  fmt.install  fpath.changes  gsl.changes  gsl.install  logs.changes  logs.install  not-ocamlfind.changes  num.changes  num.install  ocaml-base-compiler.changes  ocaml-config.changes  ocaml.changes  ocamlbuild.changes  ocamlfind.changes  ocamlgraph.changes  ocamlgraph.install  pcre2.changes  pcre2.install  re.changes  re.install  rresult.changes  topkg.changes
_opam/lib/: findlib.conf
_opam/lib/astring/: astring.cma  astring.cmt  astring.cmti  astring.cmxs  astring_base.cmt  astring_char.cmt  astring_escape.cmt  astring_string.cmt  astring_sub.cmt  astring_top.cma  astring_top.cmt  astring_top.cmx  astring_top.cmxa  astring_top.cmxs  astring_unsafe.cmt
_opam/lib/bos/: bos.cma  bos.cmi  bos.cmt  bos.cmti  bos.cmx  bos.cmxa  bos.cmxs  bos_base.cmt  bos_base.cmx  bos_cmd.cmt  bos_cmd.cmx  bos_log.cmt  bos_log.cmx  bos_os_arg.cmt  bos_os_arg.cmx  bos_os_cmd.cmt  bos_os_cmd.cmx  bos_os_dir.cmt  bos_os_dir.cmx  bos_os_env.cmt  bos_os_env.cmx  bos_os_file.cmt  bos_os_file.cmx  bos_os_path.cmt  bos_os_path.cmx  bos_os_tmp.cmt  bos_os_tmp.cmx  bos_os_u.cmt  bos_os_u.cmx  bos_pat.cmt  bos_pat.cmx  bos_setup.cma  bos_setup.cmi  bos_setup.cmt  bos_setup.cmti  bos_setup.cmx  bos_setup.cmxa  bos_setup.cmxs  bos_top.cma  bos_top.cmt  (+3 more)
_opam/lib/camlp-streams/: camlp_streams.cma  camlp_streams.cmxs  dune-package  genlex.cmt  genlex.cmti  stream.cmt  stream.cmti
_opam/lib/camlp5/: META  ast2pt.cmi  ast2pt.cmx  asttools.cmi  asttools.cmx  camlp5.cma  camlp5.cmxa  camlp5_top.cma  camlp5_top_funs.cmi  camlp5_top_funs.cmo  camlp5sch.cma  diff.cmi  diff.cmx  eprinter.cmi  eprinter.cmx  exparser.cmi  extfun.cmi  (+148 more)
_opam/lib/camlp5-buildscripts/: LAUNCH  fixin  join_meta  ya-wrap-ocamlfind
doc/: Makefile  dune  manual.html  pelzl-curses-keys.tex  pelzl.1  pelzlrc.5
etc/: dune  pelzlrc
src/: dune  modern_ui.ml  orpie_exe.ml  pelzl_exe.ml
src/core/: add.ml  big_int_str.ml  div.ml  dune  gsl_assist.ml  install.ml.in  inv.ml  mult.ml  operations.ml  pelzl_algebraic.ml  pelzl_algebraic.mli  pelzl_engine.ml  pelzl_engine.mli  pelzl_history.ml  pelzl_history.mli  pow.ml  rcfile.ml  rpc_calc.ml  rpc_stack.ml  solvelin.ml  statefile.ml  sub.ml  txtin_lexer.mll  txtin_parser.mly  units.ml  utility.ml
src/orpie/: dune  interface.ml  interface_draw.ml  interface_main.ml
src/orpie-curses-keys/: curses_assist.ml  curses_keys.ml  dune
src/ui/: dune  pelzl_app.ml  pelzl_model.ml  pelzl_subscriptions.ml  pelzl_update.ml  pelzl_view.ml
tests/: dune  support_engine.ml  test_algebraic.ml  test_bindings.ml  test_engine.ml  test_engine_improvements.ml  test_engine_parity.ml  test_engine_regressions.ml  test_orpie_manual_examples.ml  test_pelzl.ml  test_repl_history.ml  test_stack.ml  test_ui_model.ml
(+2309 files in other folders)
