opam-version: "2.0"
name: "pelzl"
version: "1.0"
maintainer: "Mason Austin Green <mason@greenm01.net>"
authors: ["Paul Pelzl <pelzlpj@gmail.com>" "Mason Austin Green <mason@greenm01.net>"]
homepage: "https://github.com/greenm01/pelzl"
bug-reports: "https://github.com/greenm01/pelzl/issues"
license: "GPL-3.0-only"
dev-repo: "git+https://github.com/greenm01/pelzl.git"
build: ["dune" "build" "-p" "pelzl"]
depends: [
  "ocaml" {>= "5.4.0"}
  "dune" {>= "3.0"}
  "gsl" {>= "1.22.0"}
  "num"
  "mosaic"
  "alcotest" {with-test}
]
synopsis: "Terminal RPN calculator"
description: """
Pelzl is a terminal RPN calculator. It supports a large chunk of the
features supported by classic HP RPN calculators, with a keyboard-optimized
user interface built on the Mosaic terminal UI framework."""
