(library
 (name pelzl_core)
 (public_name pelzl.core)
 (wrapped false)
 (flags (:standard -w -8-27-32-35-52 -thread -alert -deprecated))
 (libraries gsl num str threads camlp-streams))

; Use pelzl.opam as the authoritative source of version number
(rule
  (targets version.ml)
  (action (system "grep '^version:' %{deps} | sed -E 's/^version: *\"([^\"]*)\"/let version = \"\\1\"/' > %{targets}"))
  (deps (file %{project_root}/pelzl.opam)))

; Support $PREFIX for overriding installation location
(rule
  (targets install.ml)
  (action (run %{project_root}/scripts/compute_prefix subst %{deps} %{targets}))
  (deps (file install.ml.in)))

(ocamllex txtin_lexer)
(ocamlyacc txtin_parser)
